# ponder-poll

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  common.yaml  docker-compose.yaml  pyproject.toml
ponder_poll/: manage.py
ponder_poll/docs/: conf.py  index.rst  polls.migrations.rst  polls.rst  ponder_poll.rst
ponder_poll/docs/_build/doctrees/: environment.pickle  index.doctree  manage.doctree  modules.doctree  polls.doctree  polls.migrations.doctree  ponder_poll.doctree  users.doctree  users.migrations.doctree
ponder_poll/docs/_build/html/: .buildinfo  genindex.html  index.html  manage.html  modules.html  objects.inv  polls.html  polls.migrations.html  ponder_poll.html  py-modindex.html  search.html  searchindex.js  users.html  users.migrations.html
ponder_poll/docs/_build/html/_modules/: index.html  manage.html
ponder_poll/docs/_build/html/_modules/polls/: admin.html  (+4 more)
ponder_poll/docs/_build/html/_sources/: modules.rst.txt
ponder_poll/polls/: admin.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
ponder_poll/polls/migrations/: 0001_initial.py  0002_remove_vote_unique_vote_remove_option_quantity_and_more.py
ponder_poll/ponder_poll/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
ponder_poll/templates/: base.html
ponder_poll/templates/includes/: header.html
ponder_poll/templates/polls/: index.html  poll-create-edit.html  poll-view.html
ponder_poll/templates/users/: sign-in.html  sign-up.html
ponder_poll/users/: forms.py  models.py  urls.py  views.py
ponder_poll/users/migrations/: 0001_initial.py
(+7 files in other folders)
